err.log
src/main.cpp:66:30: error: non-constant-expression cannot be narrowed from type 'int' to 'uint16_t' (aka 'unsigned short') in initializer list [-Wc++11-narrowing]
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:66:30: note: insert an explicit cast to silence this issue
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:70:30: error: non-constant-expression cannot be narrowed from type 'int' to 'uint16_t' (aka 'unsigned short') in initializer list [-Wc++11-narrowing]
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:70:30: note: insert an explicit cast to silence this issue
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:74:30: error: non-constant-expression cannot be narrowed from type 'int' to 'uint16_t' (aka 'unsigned short') in initializer list [-Wc++11-narrowing]
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:74:30: note: insert an explicit cast to silence this issue
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:78:30: error: non-constant-expression cannot be narrowed from type 'int' to 'uint16_t' (aka 'unsigned short') in initializer list [-Wc++11-narrowing]
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:78:30: note: insert an explicit cast to silence this issue
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:82:30: error: non-constant-expression cannot be narrowed from type 'int' to 'uint16_t' (aka 'unsigned short') in initializer list [-Wc++11-narrowing]
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:82:30: note: insert an explicit cast to silence this issue
                        sta(($(0x200 +X)));
                             ^~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:86:29: error: non-constant-expression cannot be narrowed from type 'int' to 'uint16_t' (aka 'unsigned short') in initializer list [-Wc++11-narrowing]
                        sta($(0x200 + X));
                            ^~~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:86:29: note: insert an explicit cast to silence this issue
                        sta($(0x200 + X));
                            ^~~~~~~~~~~~
src/../include/instruction.h:11:26: note: expanded from macro '$'
#define $(a) myvm::_addr{(uint16_t)a}
                         ^~~~~~~~~~~
src/main.cpp:87:44: error: invalid suffix 'lda' on integer constant
                        mem_debug(0x200, 40lda('H');
                                           ^
src/main.cpp:95:2: error: expected '}'
}
 ^
src/main.cpp:11:17: note: to match this '{'
int user_code() {
                ^
8 errors generated.
make: *** [all] Error 1
